修复apple登录按钮不过了审的问题

--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMe/MeViews/GlodBuleHTLoginAlertView.xib
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMe/MeViews/GlodBuleHTLoginAlertView.xib
@@ -21,17 +21,17 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="blL-DD-De7">
                     <rect key="frame" x="0.0" y="722" width="414" height="140"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="登錄" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pjn-eL-jzR">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="登入" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pjn-eL-jzR">
                             <rect key="frame" x="190.5" y="15" width="33" height="19.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1e5-nc-zBw">
-                            <rect key="frame" x="15" y="42.5" width="80" height="82.5"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1e5-nc-zBw" userLabel="fbView">
+                            <rect key="frame" x="15" y="42.5" width="80" height="84"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pof-Tp-KHB">
-                                    <rect key="frame" x="0.0" y="0.0" width="80" height="82.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="80" height="84"/>
                                     <connections>
                                         <action selector="loginAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="oJS-rm-oBn"/>
                                     </connections>
@@ -62,6 +62,7 @@
                                 <constraint firstItem="qep-Rh-SjH" firstAttribute="centerX" secondItem="Zw2-8r-Cor" secondAttribute="centerX" id="8mA-RS-Czz"/>
                                 <constraint firstItem="Zw2-8r-Cor" firstAttribute="top" secondItem="1e5-nc-zBw" secondAttribute="top" constant="5" id="CTQ-Oh-7oO"/>
                                 <constraint firstAttribute="trailing" secondItem="pof-Tp-KHB" secondAttribute="trailing" id="FOj-Ul-kGo"/>
+                                <constraint firstAttribute="height" constant="84" id="FqB-e6-Nap"/>
                                 <constraint firstAttribute="width" constant="80" id="NlB-tV-JKw"/>
                                 <constraint firstItem="pof-Tp-KHB" firstAttribute="top" secondItem="1e5-nc-zBw" secondAttribute="top" id="SZi-qy-ZrD"/>
                                 <constraint firstItem="qep-Rh-SjH" firstAttribute="top" secondItem="Zw2-8r-Cor" secondAttribute="bottom" constant="10" id="UnM-8S-tf2"/>
@@ -70,10 +71,10 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n8w-J2-G1G">
-                            <rect key="frame" x="95" y="42.5" width="80" height="82.5"/>
+                            <rect key="frame" x="95" y="42.5" width="80" height="84"/>
                             <subviews>
                                 <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3TV-cX-KQT">
-                                    <rect key="frame" x="0.0" y="0.0" width="80" height="82.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="80" height="84"/>
                                     <connections>
                                         <action selector="loginAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="0OT-Sv-QEt"/>
                                     </connections>
@@ -112,10 +113,10 @@
                             </constraints>
                         </view>
                         <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fZY-P7-LY1" userLabel="saveView">
-                            <rect key="frame" x="95" y="42.5" width="80" height="82.5"/>
+                            <rect key="frame" x="95" y="42.5" width="80" height="84"/>
                             <subviews>
                                 <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sul-ip-sMN" userLabel="saveButton">
-                                    <rect key="frame" x="0.0" y="0.0" width="80" height="82.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="80" height="84"/>
                                     <connections>
                                         <action selector="loginAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="AK7-QA-aQp"/>
                                     </connections>
@@ -168,7 +169,6 @@
                         <constraint firstItem="Pjn-eL-jzR" firstAttribute="centerX" secondItem="blL-DD-De7" secondAttribute="centerX" id="can-V3-uBt"/>
                         <constraint firstItem="n8w-J2-G1G" firstAttribute="bottom" secondItem="fZY-P7-LY1" secondAttribute="bottom" id="evs-XT-nh1"/>
                         <constraint firstItem="n8w-J2-G1G" firstAttribute="centerY" secondItem="1e5-nc-zBw" secondAttribute="centerY" id="jAy-MN-CPO"/>
-                        <constraint firstAttribute="bottom" secondItem="1e5-nc-zBw" secondAttribute="bottom" constant="15" id="zBD-O8-hTd"/>
                     </constraints>
                 </view>
             </subviews>
@@ -184,11 +184,13 @@
                 <constraint firstAttribute="bottom" secondItem="B7I-Vt-lgu" secondAttribute="bottom" id="xCE-xc-PWQ"/>
             </constraints>
             <connections>
+                <outlet property="ContentViewHeightConstraint" destination="EQp-3F-dn2" id="2C4-jl-1Jf"/>
                 <outlet property="containerViewBottom" destination="AMQ-8o-PZp" id="0fU-8A-LuP"/>
                 <outlet property="containerViewHeight" destination="EQp-3F-dn2" id="PPI-Bk-HzN"/>
                 <outlet property="lineLoginBtn" destination="3TV-cX-KQT" id="SQH-7T-Keu"/>
                 <outlet property="lineLoginImageView" destination="sly-cX-68S" id="FXY-pk-9ls"/>
                 <outlet property="lineView" destination="n8w-J2-G1G" id="uAX-jD-r7c"/>
+                <outlet property="mContentView" destination="blL-DD-De7" id="WTa-wP-y6M"/>
                 <outlet property="safeBackView" destination="B7I-Vt-lgu" id="ISx-1o-Qnk"/>
                 <outlet property="saveView" destination="fZY-P7-LY1" id="BpT-TD-r59"/>
                 <outlet property="titleLabel" destination="Pjn-eL-jzR" id="XVr-Wx-Lom"/>
